# Multi-Agent-System-Planning

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENT_QUEUE.md  INTENT.md  ONBOARDING_STATE.md  PROJECT_BRIEF.md  README.md  RUNTIME.md  SPEC_INVENTORY.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  task.md.resolved
.claude/rules/: docker.md  knowledge-base.md  python.md  tests.md
.github/workflows/: deploy.yml
CONTEXT/: api-reference.md  architecture.md
SPECS/: add-category.md  add-knowledge-doc.md  deploy.md  process-ticket.md  run-tests.md
app/: __init__.py  config.py  logging_config.py  main.py  models.py  request_log.py
app/agents/: graph.py  resolution.py  retrieval.py  triage.py
app/data/knowledge_base/: expense_reimbursement.md  general_faq.md  hardware_replacement.md  leave_policy.md  onboarding_checklist.md  password_reset_policy.md  software_installation.md  vpn_setup_guide.md
app/llm/: provider.py
app/rag/: embeddings.py  ingest.py  vectorstore.py
tests/: conftest.py  test_api.py  test_graph.py  test_ingest.py  test_resolution.py  test_retrieval.py  test_triage.py
